#Makefile.am for unp top-level
SUBDIRS = advio bcast debug icmpd inetd intro ioctl ipopts lib libfree libgai libroute mcast my_daytime mysdr names nonblock oob ping route rtt select server sigio sctp sock sockopt ssntp streams tcpcliserv test threads traceroute udpcksum udpcliserv unixdomain
DIST_SUBDIRS =$(SUBDIRS)
