include ../Make.defines

bin_PROGRAMS = tcpcli01 tcpcli02 tcpserv02 \
		udpcli01 udpcli02 udpcli03 \
		udpserv01 udpserv03 udpserv04 \
		daytimetcpcli daytimeudpcli3 daytimeudpcli4

tcpcli02_.cURCES = tcpcli02.c str_cli_select02.c

tcpserv02_.cURCES = tcpserv02.c str_ec.c_std.c02.c sig_chld_waitpid.c

udpcli01_.cURCES = udpcli01.c dgclitim.c1.c

udpcli02_.cURCES = udpcli02.c dgclitim.c2.c

udpcli03_.cURCES = udpcli03.c dgclitim.c3.c

udpserv01_.cURCES = udpserv01.c dgec.caddr.c recvf.cmflags.c
