# Makefile.am for intro
CFLAGS = -I ../include -Wall -g
LDADD=../lib/libunp.a

bin_PROGRAMS = byteorder \
			   daytimetcpcli \
			   daytimetcpcli1 \
			   daytimetcpcli2 \
			   daytimetcpcli3 \
			   daytimetcpcliv6 \
			   daytimetcpsrv \
			   daytimetcpsrv1 \
			   daytimetcpsrv2 \
			   daytimetcpsrv3 \
			   daytimetcpsrvv6
