include ../Make.defines

bin_PROGRAMS =	daytimetcpcli daytimetcpcli1 daytimetcpsrv1 daytimetcpsrv2 \
		daytimetcpsrv3 daytimetcpsrv4 \
		daytimeudpcli1 daytimetcpcli2 daytimetcpcli3 \
		daytimeudpcli2 daytimeudpsrv2 daytimeudpsrv3 \
		hostent hostent2 hostent3 \
		netent prmyaddrs prmyaddrs1 test1

daytimeudpsrv3_SOURCES = 	daytimeudpsrv3.c udp_server_reuseaddr.c
prmyaddrs1_SOURCES = 	prmyaddrs1.c myaddrs1.c
