include ../Make.defines

bin_PROGRAMS =	tcprecv01 tcprecv02 tcprecv03 tcprecv03p tcprecv04 tcprecv05 tcprecv06 \
	 tcpsend01 tcpsend02 tcpsend03 tcpsend04 tcpsend05 tcpsend06 \
	 tcpcli02 tcpserv02

tcpcli02_SOURCES = 	tcpcli02.c strcliselect02.c heartbeatcli.c
tcpserv02_SOURCES = 	tcpserv02.c strecho02.c heartbeatserv.c sigchldwaitpid.c
