include ../Make.defines

bin_PROGRAMS =	tcpcli01 tcpcli04 tcpcli05 tcpcli06 \
		tcpcli07 tcpcli08 tcpcli09 tcpcli10 tcpcli11 \
		tcpserv01 tcpserv02 tcpserv03 tcpserv04 \
		tcpserv08 tcpserv09 tcpservselect01  tsigpipe
#		tcpservpoll01
tcpcli08_SOURCES = tcpcli08.c str_cli08.c
tcpcli09_SOURCES = tcpcli09.c str_cli09.c
tcpcli11_SOURCES = tcpcli11.c str_cli11.c
tcpserv02_SOURCES = sigchldwait.c tcpserv02.c
tcpserv03_SOURCES = sigchldwait.c tcpserv03.c
tcpserv04_SOURCES = sigchldwaitpid.c tcpserv04.c
tcpserv08_SOURCES = sigchldwaitpid.c str_echo08.c tcpserv08.c
tcpserv09_SOURCES = sigchldwaitpid.c str_echo09.c tcpserv09.c


