include ../Make.defines

bin_PROGRAMS =	web01 web02 web03 \
	tcpcli01 tcpcli02 tcpserv01 tcpserv02 \
	test01 example01 example02 example03 \
	tcpserv02g test04g udpcli07

tcpcli01_SOURCES = 	tcpcli01.c strclithread.c
tcpcli02_SOURCES = 	tcpcli02.c strclithread2.c
tcpserv02g_SOURCES = 	tcpserv02.c readline.c
test04g_SOURCES = 	test04.c readline.c
