include ../Make.defines

bin_PROGRAMS =	udpcli01 udpserv01 udpcli02 udpcli03 udpcli04 \
		udpcli06 udpcli07 udpserv06 udpserv07 udpcli08 udpcli09 udpcli10 \
		udpservselect01

udpcli02_SOURCES = 	udpcli02.c dgcliaddr.c
udpcli03_SOURCES = 	udpcli03.c dgcliinetaddr.c
udpcli04_SOURCES = 	udpcli04.c dgcliconnect.c
udpcli06_SOURCES = 	udpcli06.c dgcliloop1.c
udpserv06_SOURCES = 	udpserv06.c dgecholoop1.c
udpcli07_SOURCES = 	udpcli07.c dgcliloop2.c
udpserv07_SOURCES = 	udpserv07.c dgecholoop2.c
udpcli08_SOURCES = 	udpcli08.c dgcliloop3.c
udpcli10_SOURCES = 	udpcli10.c dgclibig.c
udpservselect01_SOURCES = 	udpservselect01.c sigchldwaitpid.c
